# savingsessions

./: .gitignore  README.md  flake.nix  pyproject.toml  streamlit_app.py
pages/: free_electricity.py  ss.py  🆓_Free_Electricity.py  🏆_League.py
savingsessions/: calculation.py  db.py  ui.py
savingsessions/scripts/: check_free_electricity.py
